--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body style="background-color: black;"></body>
 
-<header style="color: red;">PORTFOLIO</header>
+<header style="color: blue;">PORTFOLIO</header>
 <style>
 header{
 text-align: center;
