--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@ p{
 text-align: center;
 font-size: larger;}
 </style>
-<img src="C:\Users\Nicho\OneDrive\Pictures\Screenshots\Screenshot (299).png" alt="Cat" height="500" width="500">
+<img src="file:///C:\Users\Nicho\OneDrive\Pictures\Screenshots\Screenshot (299).png" alt="Cat" height="500" width="500">
