--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ p{
 text-align: center;
 font-size: larger;}
 </style>
-<img src ="https://github.com/XoXo-ICA/Port.wiki.git" alt="Cat" height="500" width="500">
-curl -vs 'https://nbr-portfolio.netlify.app/.netlify/images?url=/C:\Users\Nicho\OneDrive\Pictures\Screenshots\Screenshot (299).png
+<img src ="Screenshot (299).png" height="500" width="500">
+
