--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <body style="background-color: black;"></body>
 
-<header style="color: red;">PORTFOLIO</header>
+<header style="color: red;">About Me</header>
+<p style="color: red;">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
+ Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
+ tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
+</p>
 <style>
 header{
 text-align: center;
@@ -10,7 +14,8 @@ font-size: larger;
 }
 </style>
 
-<p style="color: red;">About Me</p>
+<p style="color: red;">Portfolio</p>
+<p style="color: red;">h</p>
 <style>
 p{text-align: center;
 font-size: larger;}
@@ -22,4 +27,5 @@ text-align: center;
 font-size: larger;}
 </style>
 <img src ="Screenshot (299).png" height="500" width="500">
+
 
