--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <body style="background-color: black;"></body>
-
 <header style="color: red;">About Me</header>
 <p style="color: red;">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
@@ -20,12 +19,16 @@ font-size: larger;
 p{text-align: center;
 font-size: larger;}
 </style>
-<p style="color: red;">Certifications</p>
+<p style="color: red;">Certifications and Awards</p>
+<p style="color: red;">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p>
 <style>
 p{
 text-align: center;
 font-size: larger;}
 </style>
-<img src ="Screenshot (299).png" height="500" width="500">
-
-
+<img src ="Screenshot (299).png" alt="This certificate was earned for completing an online course which taught the basics of Debian Linux." height="500" width="500">
+<style>
+img{
+    color: red;
+}
+</style>
