--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@ p{
 text-align: center;
 font-size: larger;}
 </style>
+<div class="container">
+<div class="image">
 <img src ="Screenshot (299).png" alt="This certificate was earned for completing an online course which taught the basics of Debian Linux." height="500" width="500">
+</div>
+<div class="text">
+    <h1 style="color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</h1>
 <style>
-img{
-    color: red;
+h1{
+    text-align: left;
+    font-size: smaller;
 }
 </style>
+</div>
+</div>
