--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <title>NBR-Portfolio</title>
+</head>
+
 <body style="background-color: black;"></body>
-<header style="color: red;">About Me</header>
-<p style="color: red;">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
+<header style="color: rgb(255, 0, 0);">About Me</header>
+<p2 style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
  tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
-</p>
+</p2>
 <style>
 header{
 text-align: center;
@@ -13,14 +17,14 @@ font-size: larger;
 }
 </style>
 
-<p style="color: red;">Portfolio</p>
-<p style="color: red;">h</p>
+<p style="color: red;">Work</p>
+<p style="color: rgb(255, 255, 255);">h</p>
 <style>
 p{text-align: center;
 font-size: larger;}
 </style>
 <p style="color: red;">Certifications and Awards</p>
-<p style="color: red;">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p>
+<p style="color: rgb(255, 255, 255);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p>
 <style>
 p{
 text-align: center;
