--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-
+<h2 style="text-align: center;">PORTFOLIO</h2>
+<style>
+h2{
+    color: white;
+    font-size: x-large;
+    background-color: red;
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+</style>
 <body style="background-color: black;"></body>
 <header style="color: rgb(255, 0, 0);">About Me</header>
 <p2 style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
