--- a/index.html
+++ b/index.html
@@ -53,4 +53,11 @@ h1{
 </style>
 </div>
 </div>
-<img src ="Screenshot (300).png" height="500" width="500">
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="Screenshot (300).png">
+        <img src="Screenshot (300).png" alt="Cinque Terre">
+      </a>
+      <div class="desc" style="background-color: gray;">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
+    </div>
+  </div>
