--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@ h1{
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="Screenshot (300).png">
-        <img src="Screenshot (300).png" alt="Cinque Terre">
+        <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
       </a>
       <div class="desc" style="background-color: gray;">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
     </div>
   </div>
+<style>
+  div.gallery{
+width: 500px;
+  }</style>
