--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@ h1{
       <a target="_blank" href="Screenshot (300).png">
         <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
       </a>
-      <div class="desc" style="background-color: gray;">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
+      <div class="desc" style="background-color: rgb(255, 0, 0);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
     </div>
   </div>
 <style>
   div.gallery{
 width: 500px;
+outline: outset;
+border-left-style: solid;
+border-color: white;
   }</style>
