--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ h1{
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="Screenshot (300).png">
-        <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
+        <img5 src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
       </a>
       <div class="desc" style="background-color: rgb(255, 0, 0);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
     </div>
@@ -68,3 +68,9 @@ outline: outset;
 border-left-style: solid;
 border-color: white;
   }</style>
+<style>
+div.img5{
+    border: solid;
+    border-color: blue;
+}
+</style>
