--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ h1{
   div.desc{
 width: 500px;
 outline: outset;
+outline-color: black;
 border-left-style: solid;
 border-color: white;
   }</style>
