--- a/index.html
+++ b/index.html
@@ -39,20 +39,6 @@ p{
 text-align: center;
 font-size: larger;}
 </style>
-<div class="container">
-<div class="image">
-<img src ="Screenshot (299).png" alt="This certificate was earned for completing an online course which taught the basics of Debian Linux." height="500" width="500">
-</div>
-<div class="text">
-    <h1 style="color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</h1>
-<style>
-h1{
-    text-align: left;
-    font-size: smaller;
-}
-</style>
-</div>
-</div>
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="Screenshot (300).png">
@@ -68,4 +54,12 @@ border-left-style: solid;
 border-color: white;
 margin-top: 10px;
   }</style>
+ 
+ <div class="gallery">
+    <a target="_blank" href="img_forest.jpg">
+      <img src="Screenshot (299).png" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc" style="background-color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
+  </div>
+  <style>
 
