--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ width: 500px;
 border-left-style: solid;
 border-color: white;
 margin-top: 10px;
+margin-bottom: 10px;
   }</style>
  
  <div class="gallery">
