--- a/index.html
+++ b/index.html
@@ -62,4 +62,9 @@ margin-bottom: 10px;
     </a>
     <div class="desc" style="background-color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
   </div>
-  <style>
+<style>
+div.gallery{
+    float: left;
+    margin: 5px;
+    }
+</style>
