--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ border-left-style: solid;
 border-color: white;
 margin-top: 10px;
 margin-bottom: 10px;
+border-radius: 5px;
   }</style>
  
  <div class="gallery">
