--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@ font-size: larger;}
   div.desc{
 width: 500px;
 border-left-style: solid;
+border-top-style: solid;
 border-color: white;
 margin-top: 10px;
 margin-bottom: 10px;
 border-radius: 5px;
+text-align: center;
   }</style>
  
  <div class="gallery">
@@ -69,3 +71,4 @@ div.gallery{
     margin: 5px;
     }
 </style>
+
