--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@ h2{
 </style>
 <body style="background-color: black;"></body>
 <header style="color: rgb(255, 0, 0);">About Me</header>
-<p2 style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
+<div class="back" style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
  tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
-</p2>
+</div>
+<style>
+    div.back{
+        background-color: rgb(56, 56, 56);
+    }
+</style>
 <style>
 header{
 text-align: center;
 font-size: larger;
+margin-bottom: 10px;
 }
 </style>
 
