--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>NBR-Portfolio</title>
 </head>
+
 <h2 style="text-align: center;">PORTFOLIO</h2>
 <style>
 h2{
@@ -10,6 +12,7 @@ h2{
     font-size: x-large;
     background-color: red;
     font-style: italic;
+   background-image: url("AA.png");
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 </style>
