--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-
+<img src="AA.png">
+<style>
+    img{position: relative;
+top: 45px;
+    }
+</style>
 <h2 style="text-align: center;">PORTFOLIO</h2>
 <style>
 h2{
@@ -12,7 +17,6 @@ h2{
     font-size: x-large;
     background-color: red;
     font-style: italic;
-   background-image: url("AA.png");
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 </style>
@@ -80,4 +84,5 @@ div.gallery{
     margin: 5px;
     }
 </style>
+
 
