--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
     img{position: relative;
 top: 45px;
+height: 15px;
     }
 </style>
 <h2 style="text-align: center;">PORTFOLIO</h2>
@@ -84,5 +85,4 @@ div.gallery{
     margin: 5px;
     }
 </style>
-
 
