--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-<img src="AA.png">
+<div class="P"<img src="AA.png"></div>
 <style>
-    img{position: relative;
+    div.P{position: relative;
 top: 45px;
-height: 15px;
+height: 30px;
     }
 </style>
 <h2 style="text-align: center;">PORTFOLIO</h2>
@@ -85,4 +85,5 @@ div.gallery{
     margin: 5px;
     }
 </style>
+
 
