--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-<div class="P"<img src="AA.png"></div>
+<div class="p">
+<img src="AA.png">
+</div>
 <style>
     div.P{position: relative;
 top: 45px;
@@ -85,5 +87,3 @@ div.gallery{
     margin: 5px;
     }
 </style>
-
-
