--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-<div class="p">
+<div class="P">
 <img src="AA.png">
 </div>
 <style>
@@ -76,7 +76,7 @@ text-align: center;
   }</style>
  
  <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
+    <a target="_blank" href="Screenshot (299).png">
       <img src="Screenshot (299).png" alt="Forest" width="500" height="500">
     </a>
     <div class="desc" style="background-color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
