--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@ div.gallery{
     margin: 5px;
     }
 </style>
-
-<img src="discord.webp" href="https://discord.gg/3dgSZuxx4p">
+<div class="branch">
+<a target="_blank" href="https://discord.gg/3dgSZuxx4p">
+<img src="discord.webp">
+</a>
+</div>
