--- a/index.html
+++ b/index.html
@@ -82,3 +82,11 @@ div.gallery{
 <img src="discord.webp">
 </a>
 </div>
+<form action="/html/tags/html_form_tag_action.cfm" method="post">
+    <div>
+    <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+    Hey... say something!
+    </textarea>
+    </div>
+    <input type="submit" value="Submit">
+    </form>
