--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 </style>
-<body style="background-color: black;"></body>
+<body style="background-color: rgb(0, 0, 0);"></body>
 <header style="color: rgb(255, 0, 0);">About Me</header>
 <div class="back" style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
@@ -82,3 +82,9 @@ div.gallery{
 <img src="discord.webp">
 </a>
 </div>
+<style>
+    div.branch{
+        height: 50px;
+        width: 50px;
+    }
+</style>
