--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@ div.gallery{
 </style>
 <div class="branch">
 <a target="_blank" href="https://discord.gg/3dgSZuxx4p">
-<img src="discord.webp">
+<img src="discord.webp" height="50" width="50">
 </a>
 </div>
-<style>
-    div.branch{
-        height: 50px;
-        width: 50px;
-    }
-</style>
+
