--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 h2{
     color: white;
     font-size: x-large;
-    background-color: red;
+    background-color: #A67B5B;
     font-style: italic;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
