--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h2{
 }
 </style>
 <body style="background-color: #A0DEFF;"></body>
-<header style="color: rgb(255, 0, 0);">About Me</header>
+<header style="color: rgb(0, 0, 0);">About Me</header>
 <div class="back" style="color: rgb(252, 252, 252);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
  tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
@@ -32,14 +32,14 @@ margin-bottom: 10px;
 }
 </style>
 
-<p style="color: red;">Work</p>
-<p style="color: rgb(255, 255, 255);">h</p>
+<p style="color: rgb(0, 0, 0);">Work</p>
+<p style="color: rgb(0, 0, 0);">h</p>
 <style>
 p{text-align: center;
 font-size: larger;}
 </style>
-<p style="color: red;">Certifications and Awards</p>
-<p style="color: rgb(255, 255, 255);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p>
+<p style="color: rgb(0, 0, 0);">Certifications and Awards</p>
+<p style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p>
 <style>
 p{
 text-align: center;
@@ -50,7 +50,7 @@ font-size: larger;}
       <a target="_blank" href="Screenshot (300).png">
         <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
       </a>
-      <div class="desc" style="background-color: rgb(255, 0, 0);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
+      <div class="desc" style="background-color: rgb(25, 74, 121);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
     </div>
   </div>
 <style>
@@ -58,7 +58,7 @@ font-size: larger;}
 width: 500px;
 border-left-style: solid;
 border-top-style: solid;
-border-color: white;
+border-color: rgb(0, 0, 0);
 margin-top: 10px;
 margin-bottom: 10px;
 border-radius: 5px;
@@ -69,7 +69,7 @@ text-align: center;
     <a target="_blank" href="Screenshot (299).png">
       <img src="Screenshot (299).png" alt="Forest" width="500" height="500">
     </a>
-    <div class="desc" style="background-color: red;">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
+    <div class="desc" style="background-color: rgb(25, 74, 121);">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
   </div>
 <style>
 div.gallery{
@@ -82,5 +82,4 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
-
 
