--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-<h2 style="text-align: center;">PORTFOLIO</h2>
+<h2 style="text-align: left;">PORTFOLIO</h2>
 <style>
 h2{
     color: white;
+    height: 40px;
+    border: solid;
+    border-color: black;
+    border-radius: 3px;
     font-size: x-large;
     background-color: #A67B5B;
     font-style: italic;
@@ -84,5 +88,4 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
-
 
