--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ h2{
 }
 </style>
 <body style="background-color: #A0DEFF;"></body>
+<style>
+    body{
+        background-image: url(aq.jpg);
+    }
+</style>
 <header style="color: rgb(0, 0, 0);">About Me</header>
 <div class="back" style="color: rgb(0, 0, 0);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
@@ -88,5 +93,3 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
-
-
