--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ h2{
 <style>
     body{
         background-image: url(aq.jpg);
+        opacity: 0.5;
     }
 </style>
 <header style="color: rgb(0, 0, 0);">About Me</header>
@@ -93,3 +94,4 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
+
