--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h2{
 <style>
     body{
         background-image: url(aq.jpg);
-        opacity: 0.5;
+        background-blend-mode: lighten;
     }
 </style>
 <header style="color: rgb(0, 0, 0);">About Me</header>
@@ -94,4 +94,5 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
+
 
