--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 </style>
-<body style="background-color: #A0DEFF;"></body>
+<body style="background-color: #a0deff5e;"></body>
 <style>
     body{
         background-image: url(aq.jpg);
