--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h2{
         background-blend-mode: lighten;
     }
 </style>
-<header style="color: rgb(0, 0, 0);">About Me</header>
+<header style="color: rgb(255, 255, 255);">About Me</header>
 <div class="back" style="color: rgb(0, 0, 0);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
  tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
@@ -39,23 +39,23 @@ header{
 text-align: center;
 font-size: larger;
 margin-bottom: 10px;
-background-color: rgba(0, 0, 0, 0.212);
+background-color: rgb(0, 0, 0);
 }
 </style>
 
-<p style="color: rgb(0, 0, 0);">Work</p>
+<p style="color: rgb(255, 255, 255);">Work</p>
 <p2 style="color: rgb(0, 0, 0);">h</p2>
 <style>
 p{text-align: center;
 font-size: larger;}
 </style>
-<p style="color: rgb(0, 0, 0);">Certifications and Awards</p>
+<p style="color: rgb(201, 194, 194);">Certifications and Awards</p>
 <p2 style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p2>
 <style>
 p{
 text-align: center;
 font-size: larger;
-background-color: rgb(0, 0, 0, 0.212);}
+background-color: rgb(0, 0, 0);}
 </style>
 <div class="responsive">
     <div class="gallery">
@@ -94,5 +94,6 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
+
 
 
