--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ text-align: center;
 font-size: larger;
 margin-bottom: 10px;
 background-color: rgb(0, 0, 0);
+margin-left: 50px;
+margin-right: 50px;
 }
 </style>
 
