--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ h2{
     div.back{
         border-radius: 10px;
         background-color: gray;
+        margin-left: 50px;
+        margin-right: 50px;
     }
 </style>
 <style>
@@ -48,6 +50,7 @@ margin-right: 50px;
 
 <p style="color: rgb(255, 255, 255);">Work</p>
 <p2 style="color: rgb(0, 0, 0);">h</p2>
+
 <style>
 p{text-align: center;
 font-size: larger;}
@@ -58,7 +61,15 @@ font-size: larger;}
 p{
 text-align: center;
 font-size: larger;
-background-color: rgb(0, 0, 0);}
+background-color: rgb(0, 0, 0);
+margin-left: 50px;
+margin-right: 50px;}
+</style>
+<style>
+  p2{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 </style>
 <div class="responsive">
     <div class="gallery">
