--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ h2{
         background-color: gray;
         margin-left: 50px;
         margin-right: 50px;
+       border: solid;
+        border-color: black;
     }
 </style>
 <style>
@@ -108,6 +110,5 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
-
 
 
