--- a/index.html
+++ b/index.html
@@ -110,5 +110,13 @@ div.gallery{
 <img src="discord.webp" height="50" width="50">
 </a>
 </div>
+<style>
+  img{
+    border: solid;
+    border: black;
+    border-radius: 10px;
+  }
+</style>
+
 
 
