--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ div.gallery{
 <style>
   img{
     border: solid;
-    border: black;
+    border-color: black;
     border-radius: 10px;
   }
 </style>
