--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@ margin-right: 50px;}
   </div>
 <style>
   div.desc{
-width: 500px;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 500px;
 border-left-style: solid;
 border-top-style: solid;
 border-color: rgb(0, 0, 0);
@@ -101,8 +103,9 @@ text-align: center;
   </div>
 <style>
 div.gallery{
+  margin-left: 50px;
+  margin-right: 50px;
     float: left;
-    margin: 5px;
     }
 </style>
 <div class="branch">
@@ -117,6 +120,4 @@ div.gallery{
     border-radius: 10px;
   }
 </style>
-
-
 
