--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ border-color: rgb(0, 0, 0);
 margin-top: 10px;
 margin-bottom: 10px;
 border-radius: 5px;
+margin-right: 10px;
 text-align: center;
   }</style>
  
@@ -102,6 +103,7 @@ text-align: center;
 <style>
 div.gallery{
   margin-left: 50px;
+  margin-right: 50;
     float: left;
     }
 </style>
@@ -115,5 +117,6 @@ div.gallery{
     border: solid;
     border-color: black;
     border-radius: 10px;
+    margin-right: 50px;
   }
 </style>
