--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@ h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 </style>
-<body style="background-color: #a0deff5e;"></body>
-<style>
-    body{
-        background-image: url(aq.jpg);
-        background-blend-mode: lighten;
-    }
-</style>
+<body style="background-color: #59aedbda;"></body>
 <header style="color: rgb(255, 255, 255);">About Me</header>
 <div class="back" style="color: rgb(0, 0, 0);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
  Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
@@ -65,12 +59,12 @@ text-align: center;
 font-size: larger;
 background-color: rgb(0, 0, 0);
 margin-left: 50px;
-margin-right: 50px;}
+margin-right: 50px;
+}
 </style>
 <style>
   p2{
     margin-left: 50px;
-    margin-right: 50px;
   }
 </style>
 <div class="responsive">
@@ -90,7 +84,6 @@ border-color: rgb(0, 0, 0);
 margin-top: 10px;
 margin-bottom: 10px;
 border-radius: 5px;
-margin-right: 10px;
 text-align: center;
   }</style>
  
@@ -102,8 +95,8 @@ text-align: center;
   </div>
 <style>
 div.gallery{
-  margin-left: 50px;
-  margin-right: 50;
+   margin: 5px;
+   margin-left: 50px;
     float: left;
     }
 </style>
@@ -117,6 +110,6 @@ div.gallery{
     border: solid;
     border-color: black;
     border-radius: 10px;
-    margin-right: 50px;
+    
   }
 </style>
