--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ h2{
     color: white;
     height: 50px;
     border: solid;
-    border-color: black;
+    border-color: rgb(0, 0, 0);
     border-radius: 3px;
     font-size: x-large;
-    background-color: #A67B5B;
+    background-color: rgb(16, 10, 51);
     font-style: italic;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -113,3 +113,4 @@ div.gallery{
     
   }
 </style>
+
