--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ margin-top: 10px;
 margin-bottom: 10px;
 border-radius: 5px;
 text-align: center;
+border-left-width: 6px;
   }</style>
  
  <div class="gallery">
