--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ h2{
         margin-right: 50px;
        border: solid;
         border-color: black;
+        font-size: large;
     }
 </style>
 <style>
@@ -51,7 +52,7 @@ margin-right: 50px;
 p{text-align: center;
 font-size: larger;}
 </style>
-<p style="color: rgb(201, 194, 194);">Certifications and Awards</p>
+<p style="color: rgb(255, 255, 255);">Certifications and Awards</p>
 <p2 style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p2>
 <style>
 p{
@@ -65,6 +66,7 @@ margin-right: 50px;
 <style>
   p2{
     margin-left: 50px;
+    font-size: large;
   }
 </style>
 <div class="responsive">
@@ -86,6 +88,7 @@ margin-bottom: 10px;
 border-radius: 5px;
 text-align: center;
 border-left-width: 6px;
+font-size: large;
   }</style>
  
  <div class="gallery">
@@ -114,4 +117,3 @@ div.gallery{
     
   }
 </style>
-
