--- a/index.html
+++ b/index.html
@@ -106,14 +106,17 @@ div.gallery{
 </style>
 <div class="branch">
 <a target="_blank" href="https://discord.gg/3dgSZuxx4p">
-<img src="discord.webp" height="50" width="50">
+<div class="Img" src="discord.webp" height="50" width="50"> 
+</div>
 </a>
 </div>
 <style>
-  img{
+  div.Img{
     border: solid;
     border-color: black;
     border-radius: 10px;
-    
+    position: absolute;
+    right: 300px;
+    top: 45px;
   }
 </style>
