--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@ div.gallery{
     }
 </style>
 <div class="branch">
-<a target="_blank" href="https://discord.gg/3dgSZuxx4p">
-<div class="Img" src="discord.webp" height="50" width="50"> 
-</div>
-</a>
+  <a target="_blank" href="https://discord.gg/3dgSZuxx4p">
+    <img src="discord.webp" alt="Forest" width="50" height="50">
+  </a>
 </div>
 <style>
-  div.Img{
+  div.branch{
     border: solid;
     border-color: black;
     border-radius: 10px;
