--- a/index.html
+++ b/index.html
@@ -116,3 +116,96 @@ div.gallery{
     top: 25px;
   }
 </style>
+<div class="Roblox">
+  <a target="_blank" href="https://www.roblox.com/users/1603419401/profile">
+    <img src="roblox.png" alt="Forest" width="50" height="50">
+  </a>
+</div>
+<style>
+  div.branch{
+    position: absolute;
+    right: 350px;
+    top: 25px;
+  }
+</style>
+
+text-align: center;
+font-size: larger;
+margin-bottom: 10px;
+background-color: rgb(0, 0, 0);
+margin-left: 50px;
+margin-right: 50px;
+}
+</style>
+
+<p style="color: rgb(255, 255, 255);">Work</p>
+<p2 style="color: rgb(0, 0, 0);">h</p2>
+
+<style>
+p{text-align: center;
+font-size: larger;}
+</style>
+<p style="color: rgb(255, 255, 255);">Certifications and Awards</p>
+<p2 style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p2>
+<style>
+p{
+text-align: center;
+font-size: larger;
+background-color: rgb(0, 0, 0);
+margin-left: 50px;
+margin-right: 50px;
+}
+</style>
+<style>
+  p2{
+    margin-left: 50px;
+    font-size: large;
+  }
+</style>
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="Screenshot (300).png">
+        <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
+      </a>
+      <div class="desc" style="background-color: rgb(69, 135, 197);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
+    </div>
+  </div>
+<style>
+  div.desc{
+    margin-left: 0px;
+border-left-style: solid;
+border-top-style: solid;
+border-color: rgb(0, 0, 0);
+margin-top: 10px;
+margin-bottom: 10px;
+border-radius: 5px;
+text-align: center;
+border-left-width: 6px;
+font-size: large;
+  }</style>
+ 
+ <div class="gallery">
+    <a target="_blank" href="Screenshot (299).png">
+      <img src="Screenshot (299).png" alt="Forest" width="500" height="500">
+    </a>
+    <div class="desc" style="background-color: rgb(69, 135, 197);">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
+  </div>
+<style>
+div.gallery{
+   margin: 5px;
+   margin-left: 50px;
+    float: left;
+    }
+</style>
+<div class="branch">
+  <a target="_blank" href="https://discord.gg/3dgSZuxx4p">
+    <img src="discord.webp" alt="Forest" width="50" height="50">
+  </a>
+</div>
+<style>
+  div.branch{
+    position: absolute;
+    right: 50px;
+    top: 25px;
+  }
+</style>
