--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@ margin-right: 50px;
 }
 </style>
 
-<p style="color: rgb(255, 255, 255);">Work</p>
+<div class="LOP" style="color: rgb(255, 255, 255);">Work</div>
 <p2 style="color: rgb(0, 0, 0);">h</p2>
-
 <style>
-p{text-align: center;
-font-size: larger;}
+div.LOP{text-align: center;
+font-size: larger;
+background-color: black;
+margin-left: 50px;
+margin-right: 50px;
+margin-top: 10px;}
 </style>
-<p style="color: rgb(255, 255, 255);">Certifications and Awards</p>
+<div class="Alpha"><p style="color: rgb(255, 255, 255);">Certifications and Awards</p></div>
 <p2 style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p2>
 <style>
-p{
+div.Alpha{
 text-align: center;
 font-size: larger;
 background-color: rgb(0, 0, 0);
@@ -149,4 +152,5 @@ div.gallery{
     <button type="submit">Send</button>
   </p>
 </form>
+
 
