--- a/comment.html
+++ b/comment.html
@@ -1,4 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <body style="background-color: #59aedbda;"></body>
+<head>
+    <title>Leave-A-Review</title>
+</head>
+<h2 style="text-align: left;">Contact/Review</h2>
+<style>
+h2{
+    color: white;
+    height: 50px;
+    border: solid;
+    border-color: rgb(0, 0, 0);
+    border-radius: 3px;
+    font-size: x-large;
+    background-color: rgb(16, 10, 51);
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
+  <form name="contact" method="POST" data-netlify="true">
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Your Role: <select name="role[]" multiple>
+      <option value="leader">Leader</option>
+      <option value="follower">Follower</option>
+    </select></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
+<style>
+  form{
+    right: 100px;
+  }
+</style>
+  
