--- a/comment.html
+++ b/comment.html
@@ -17,8 +17,8 @@ h2{
     font-style: italic;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-  <form name="contact" method="POST" data-netlify="true">
+</style>
+<form name="contact" method="POST" data-netlify="true">
   <p>
     <label>Your Name: <input type="text" name="name" /></label>
   </p>
