--- a/comment.html
+++ b/comment.html
@@ -27,8 +27,9 @@ h2{
   </p>
   <p>
     <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
+      <option value="Business">Business</option>
+      <option value="Developer">Developer</option>
+      <option value="Follower">Follower</option>
     </select></label>
   </p>
   <p>
