--- a/comment.html
+++ b/comment.html
@@ -33,15 +33,44 @@ h2{
     </select></label>
   </p>
   <p>
-    <label>Message: <textarea name="message"></textarea></label>
+    <label>Message:</label>
+    <p><textarea name="message"></textarea></p>
   </p>
   <p>
     <button type="submit">Send</button>
   </p>
 </form>
 <style>
-  form{
-    right: 100px;
+  option{
+    background-color: rgb(69, 135, 197);
+    margin: 5px;
+    color: white;
+  }
+</style>
+<style>
+  label{
+    background-color: rgb(128,128,128);
+    margin: 5px;
+    color: white;
+  position: relative;
+    right: -800px;
+    bottom: -200px;
+  }
+</style>
+<style>
+  select{
+    background-color: rgb(16, 10, 51);
+    margin: 5px;
+    color: white;
+  }
+</style>
+<style>
+  textarea{
+    background-color: rgb(16, 10, 51);
+    margin: 5px;
+    color: white;
+    border-radius: 10px;
+  
   }
 </style>
   
