--- a/comment.html
+++ b/comment.html
@@ -20,21 +20,15 @@ h2{
 </style>
 <form name="contact" method="POST" data-netlify="true">
   <p>
-    <label>Your Name: <input type="text" name="name" /></label>
+    <z>Your Name: <input type="text" name="name" /></z>
   </p>
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <o>Your Email: <input type="email" name="email" /></o>
   </p>
   <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="Business">Business</option>
-      <option value="Developer">Developer</option>
-      <option value="Follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message:</label>
     <p><textarea name="message"></textarea></p>
+  </p>
+  <p><b>Message:</b>
   </p>
   <p>
     <button type="submit">Send</button>
@@ -48,20 +42,13 @@ h2{
   }
 </style>
 <style>
-  label{
-    background-color: rgb(128,128,128);
-    margin: 5px;
+  b{
+    text-align: center;
+background-color: rgb(0, 0, 0);
+position: relative;
+right: -500px;   
     color: white;
-  position: relative;
-    right: -800px;
-    bottom: -200px;
-  }
-</style>
-<style>
-  select{
-    background-color: rgb(16, 10, 51);
-    margin: 5px;
-    color: white;
+    top: -235px;
   }
 </style>
 <style>
@@ -70,7 +57,36 @@ h2{
     margin: 5px;
     color: white;
     border-radius: 10px;
-  
+    position: relative;
+    right: -500px;   
+    bottom: -240px;
+    width: 800px;
+    height: 400px;
   }
 </style>
+<style>
+  z{
+    background-color: rgb(16, 10, 51);
+    margin: 5px;
+    color: white;
+    position: relative;
+    right: -500px;   
+    bottom: -200px;
+    width: 800px;
+    height: 400px;
+  }
+</style>
+<style>
+  o{
+    background-color: rgb(16, 10, 51);
+    margin: 5px;
+    color: white;
+    position: relative;
+    right: -500px;   
+    bottom: -200px;
+    width: 800px;
+    height: 400px;
+  }
+</style>
+
   
