--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>NBR-Portfolio</title>
 </head>
-<h2 style="text-align: left;">PORTFOLIO</h2>
+<h2 class="z" style="text-align: left;">PORTFOLIO</h2>
 <style>
-h2{
+h2.z{
     color: white;
     height: 50px;
     border: solid;
@@ -135,4 +135,146 @@ div.gallery{
 <a href="comment.html">
   <button>Send a review!</button>
 </a>
+
+<head>
+  <title>Comment Box</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+      div.form-group1 {
+          background-color: blueviolet;
+      }
+      .comments {
+          margin-top: 20px;
+          max-height: 300px; /* Set a max height for the scrollable area */
+          overflow-y: auto; /* Enable vertical scrolling */
+          border: 1px solid #ccc; /* Optional: border for the comments section */
+          padding: 10px; /* Optional: padding for better appearance */
+      }
+      .comment {
+          border: 1px solid #ccc;
+          margin-bottom: 10px;
+          padding: 10px;
+          border-radius: 5px;
+          position: relative; /* Allow positioning of the delete button */
+      }
+      .delete-btn {
+          position: absolute; /* Position the button relative to the comment */
+          top: 5px;
+          right: 5px;
+          background-color: red;
+          color: white;
+          border: none;
+          padding: 5px;
+          cursor: pointer;
+      }
+  </style>
+</head>
+<body>
+  <div class="container">
+      <div class="comment-box gradient-bg">
+          <h2 class="comment-title">Join the conversation</h2>
+          <form id="commentForm">
+              <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" id="name" name="name" placeholder="Enter your name" required>
+              </div>
+              <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" name="email" placeholder="Enter your email" required>
+              </div>
+              <div class="form-group1">
+                  <label for="comment">Comment:</label>
+                  <textarea id="comment" name="comment" placeholder="Type your comment here" required></textarea>
+              </div>
+              <button type="submit" class="btn-submit">Submit</button>
+          </form>
+          <div class="comments" id="commentsSection"></div>
+      </div>
+  </div>
+  
+  <script>
+      const form = document.getElementById('commentForm');
+      const commentsSection = document.getElementById('commentsSection');
+      const adminEmail = "nickream465@gmail.com"; // Set your admin email
+
+      // Load comments from Local Storage
+      function loadComments() {
+          const comments = JSON.parse(localStorage.getItem('comments')) || [];
+          comments.forEach(comment => {
+              displayComment(comment.name, comment.comment, comment.email);
+          });
+      }
+
+      // Display a single comment
+      function displayComment(name, comment, email) {
+          const commentDiv = document.createElement('div');
+          commentDiv.classList.add('comment');
+          commentDiv.innerHTML = `
+              <strong>${name}</strong>: <p>${comment}</p>
+              <button class="delete-btn" onclick="deleteComment('${email}')">Delete</button>
+          `;
+          commentsSection.appendChild(commentDiv);
+      }
+
+      function deleteComment(email) {
+          if (email !== adminEmail) {
+              alert("You do not have permission to delete comments.");
+              return;
+          }
+
+          // Remove the comment from Local Storage
+          let comments = JSON.parse(localStorage.getItem('comments')) || [];
+          comments = comments.filter(comment => comment.email !== email);
+          localStorage.setItem('comments', JSON.stringify(comments));
+
+          // Refresh the comments display
+          commentsSection.innerHTML = '';
+          loadComments();
+      }
+
+      form.addEventListener('submit', function(event) {
+          event.preventDefault(); // Prevent the default form submission
+
+          const name = document.getElementById('name').value;
+          const comment = document.getElementById('comment').value;
+          const email = document.getElementById('email').value; // Get email for deletion check
+
+          // Save the comment to Local Storage
+          const comments = JSON.parse(localStorage.getItem('comments')) || [];
+          comments.push({ name, comment, email }); // Store email with comment
+          localStorage.setItem('comments', JSON.stringify(comments));
+
+          // Display the new comment
+          displayComment(name, comment, email);
+
+          // Clear the form
+          form.reset();
+      });
+
+      // Load comments on page load
+      loadComments();
+  </script>
+</body>
+<style>
+  div.container{
+    background-color: gray;
+  }
+  h2.comment-title{
+    text-align: left;
+    margin: 100px;
+    margin-left: 0;
+    margin-right: 0px;
+    color: white;
+    height: 50px;
+    border: solid;
+    border-color: rgb(0, 0, 0);
+    border-radius: 3px;
+    font-size: x-large;
+    background-color: rgb(16, 10, 51);
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+</style>
 
