--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ div.gallery{
               </div>
               <div class="form-group">
                   <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                  <input type="email" id="email" name="email" placeholder="Enter your email**NREQ**">
               </div>
               <div class="form-group1">
                   <label for="comment">Comment:</label>
@@ -277,4 +277,3 @@ div.gallery{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 </style>
-
