--- a/index.html
+++ b/index.html
@@ -217,7 +217,6 @@ div.gallery{
           `;
           commentsSection.appendChild(commentDiv);
       }
-
       function deleteComment(email) {
           if (email !== adminEmail) {
               alert("You do not have permission to delete comments.");
@@ -264,6 +263,7 @@ div.gallery{
   h2.comment-title{
     text-align: left;
     margin: 100px;
+    margin-top: 20px;
     margin-left: 0;
     margin-right: 0px;
     color: white;
