--- a/index.html
+++ b/index.html
@@ -259,10 +259,11 @@ div.gallery{
 <style>
   div.container{
     background-color: gray;
+    position: relative;
+    bottom: -100px;
   }
   h2.comment-title{
     text-align: left;
-    margin: 100px;
     margin-top: 20px;
     margin-left: 0;
     margin-right: 0px;
